--- a/client/components/article-note.html
+++ b/client/components/article-note.html
@@ -1,3 +1,5 @@
-<template>
-
+<template bindable="note">
+    <div>
+        <span class="article-note"><i class="fa fa-dot-circle-o note-icon"></i>${note}</span>
+    </div>
 </template>
