--- a/client/components/icon-card.html
+++ b/client/components/icon-card.html
@@ -1,7 +1,7 @@
 <template bindable="model">
-    <div class="skill-card">
+    <div class="icon-card">
         <div class="skill-card-image">
-            <img src="${'/images/' + model.icon}"/>
+            <img src="${'images/' + model.icon}"/>
         </div>
         <span class="skill-card-footer">${model.display}</span>
     </div>
