--- a/client/components/section-header.html
+++ b/client/components/section-header.html
@@ -1,3 +1,5 @@
-<template>
-
+<template bindable="section">
+    <div class="section-header">
+        <a name="${section.name}" class="section-title">${section.name}</a>
+    </div>
 </template>
