--- a/client/components/experience-article.html
+++ b/client/components/experience-article.html
@@ -4,7 +4,7 @@
 
     <div class="article">
         <article-header article.bind="article"></article-header>
-        <div class="experience-article-items">
+        <div>
             <project-article repeat.for="project of article.projects" article.bind="project"></project-article>
         </div>
     </div>
