--- a/client/components/section-header.html
+++ b/client/components/section-header.html
@@ -1,5 +1,6 @@
 <template bindable="section">
+    <a id="${section.name}" name="${section.name}" data-magellan-target="${section.name}"></a>
     <div class="section-header">
-        <a name="${section.name}" class="section-title">${section.name}</a>
+        <h1 class="float-right">${section.name}</h1>
     </div>
 </template>
