--- a/client/components/section-link.html
+++ b/client/components/section-link.html
@@ -1,8 +1,6 @@
 <template bindable="name, icon, iconColor, size">
-    <div>
         <a href="#${name}">
-            <i class="fa ${icon}" css="color: ${iconColor}; font-size: ${size}rem;"></i>
+            <i class="fa fa-${icon}" css="color: ${iconColor}; font-size: ${size}rem;"></i>
             <span css="font-size: ${size}rem;">${name}</span>
         </a>
-    </div>
 </template>
