--- a/client/components/project-article.html
+++ b/client/components/project-article.html
@@ -4,7 +4,7 @@
 
     <div class="article">
         <article-header article.bind="article"></article-header>
-        <div class="project-article-items">
+        <div>
             <article-note repeat.for="note of article.notes" note.bind="note"></article-note>
         </div>
     </div>
