bit more styling

--- a/client/components/article-header.html
+++ b/client/components/article-header.html
@@ -1,7 +1,7 @@
 <template bindable="article">
     <div class="article-header">
-        <span>${article.name}</span>
-        <span>${article.dates}</span>
-        <span>${article.role}</span>
+        <span class="capitalize">${article.name}</span>
+        <span class="capitalize">${article.dates}</span>
+        <span class="capitalize">${article.role}</span>
     </div>
 </template>
