--- a/client/components/section-header.html
+++ b/client/components/section-header.html
@@ -1,6 +1,6 @@
 <template bindable="section">
     <a id="${section.name}" name="${section.name}" data-magellan-target="${section.name}"></a>
     <div class="section-header">
-        <h1 class="float-right">${section.name}</h1>
+        <h1 class="float-right capitalize">${section.name}</h1>
     </div>
 </template>
