--- a/client/styles/site.scss
+++ b/client/styles/site.scss
@@ -106,6 +106,40 @@ body {
   }
 }
 
+.capitalize {
+  text-transform: capitalize;
+}
+
+.menu-header {
+  height: 7.5rem;
+  background-color: navy;
+  padding-top: 1rem;
+
+  span {
+    padding:0 0 0 1rem;
+    margin: 0;
+    top: 0;
+  }
+}
+
+.resume-target {
+  color: #FFFFFF;
+  font-size: 2rem;
+  font-weight: 400;
+}
+
+.resume-statement {
+  color: #FFFFFF;
+}
+
+.section-link {
+  padding-left: 1rem;
+
+  a {
+    color: #000000;
+  }
+}
+
 //.inner-wrap {
 //  width: auto;
 //}
