--- a/client/components/icon-article.html
+++ b/client/components/icon-article.html
@@ -2,7 +2,7 @@
     <require from="./article-header.html"></require>
 
     <div class="article">
-        <article-header article.bind="article"></article-header>
+        <article-header article.bind="article" class="icon"></article-header>
         <div class="row">
             <template repeat.for="item of article.items">
                 <div>
