--- a/client/components/article-note.html
+++ b/client/components/article-note.html
@@ -1,5 +1,5 @@
 <template bindable="note">
     <div>
-        <span><i class="fa fa-dot-circle-o note-icon"></i>${note}</span>
+        <span><i class="fa fa-dot-circle-o note-icon" style="padding-right: 0.5rem;"></i>${note}</span>
     </div>
 </template>
