--- a/client/components/section-link.html
+++ b/client/components/section-link.html
@@ -1,8 +1,8 @@
 <template bindable="name, icon, iconColor, size">
     <div class="section-link">
-        <a href="#${name}" class="section-link-link">
-            <i class="fa fa-${icon}" css="color: ${iconColor}; font-size: ${size}rem;"></i>
-            <span class="capitalize" css="font-size: ${size}rem;">${name}</span>
+        <a href="#${name}">
+            <i class="fa fa-fw fa-${icon}" css="color: ${iconColor}; font-size: ${size}rem;"></i>
+            <span class="capitalize" css="font-size: ${size}rem; padding-left: 1rem;">${name}</span>
         </a>
     </div>
 </template>
