just need smooth scrolling

--- a/client/styles/site.scss
+++ b/client/styles/site.scss
@@ -29,6 +29,10 @@ body {
   }
 }
 
+.contact-items {
+  font-size: 1.5rem;
+}
+
 .skill-card{
   background-color:#fff;
   max-height:9.375rem;
@@ -134,7 +138,7 @@ body {
 }
 
 .section-link {
-  padding: 0.5rem 0 0 1rem;
+  padding: 1rem 0 0 3rem;
 
   a {
     color: #000000;
