--- a/client/components/contact-section.html
+++ b/client/components/contact-section.html
@@ -4,13 +4,13 @@
         <h1 class="float-right capitalize">contact</h1>
     </div>
 
-    <div class="article" style="padding-bottom: 26.4rem;">
+    <div class="article" style="padding-bottom: 100rem;">
         <div class="contact-items">
             <div>
                 <span><i class="fa fa-envelope-o" style="padding-right: 1rem;"></i>weagle08@gmail.com</span>
             </div>
             <div>
-                <span><i class="fa fa-phone" style="padding-right: 1rem;"></i>334-740-6353</span>
+                <span><i class="fa fa-phone" style="padding-right: 1rem;"></i>+1-334-740-6353</span>
             </div>
             <div>
                 <a href="https://github.com/weagle08" target="_blank" style="font-size: 3rem;"><i class="fa fa-github"></i></a>
