--- a/src/client/components/page-menu/page-menu.html
+++ b/src/client/components/page-menu/page-menu.html
@@ -1,11 +1,23 @@
 <template>
     <require from="components/page-menu/page-menu.css!"></require>
 
-    <div class="menu-content">
-        <ul class="menu-list">
-            <li class="menu-item"><a href="#/info"><i class="fa fa-user"></i><span>Info</span></a></li>
-            <li><a href="#/experience" class="menu-item"><i class="fa fa-th-list"></i><span>Experience</span></a></li>
-            <li><a href="#/contact" class="menu-item"><i class="fa fa-envelope"></i><span>Contact</span></a></li>
-        </ul>
+    <div class="title-bar">
+        <button type="button"><i class="fa fa-bars"></i></button>
+        <div class="title-bar-title">Ben Johnson</div>
     </div>
+
+    <nav class="navbar navbar-default">
+        <div class="navbar-header">
+            <img class="avatar" src="images/avatar.jpg"/>
+            <div class="navbar-header-title">
+                <h1>Ben Johnson</h1>
+                <span>Software Engineer</span>
+            </div>
+        </div>
+        <ul id="navMenu" class="nav" click.delegate="_onNavClick($event)">
+            <li class="active" click.trigger="_navigateToRoute('info')"><i class="fa fa-user"></i><span>Info</span></li>
+            <li click.trigger="_navigateToRoute('experience')"><i class="fa fa-th-list"></i><span>Experience</span></li>
+            <li click.trigger="_navigateToRoute('contact')"><i class="fa fa-envelope"></i><span>Contact</span></li>
+        </ul>
+    </nav>
 </template>
