--- a/src/client/components/page-menu/page-menu.scss
+++ b/src/client/components/page-menu/page-menu.scss
@@ -1,53 +1,130 @@
 @import "../../styles/libs/variables";
 
-$color-active: darken($color-menu, 5%);
+.avatar {
+  height: 4rem;
+  width: 4rem;
+}
 
-.menu-list {
+.nav {
+  margin: 0;
+  padding: 0;
   list-style: none;
-  padding: 1em;
-}
-
-.menu-list>li>a {
-  text-decoration: none;
-}
-
-.menu-list>li>a>i {
-  padding-right: 1.5em;
-}
-
-.menu-content {
-  height: 100%;
-}
-
-.menu-list>li {
-  width: 100%;
-}
-
-.menu-item {
-  color: $color-default;
-  font-weight: 400;
-  text-align: center;
   vertical-align: middle;
-  -ms-touch-action: manipulation;
-  touch-action: manipulation;
-  cursor: pointer;
-  background-image: none;
-  border: 1px solid transparent;
-  white-space: nowrap;
-  padding: 10px 15px;
-  font-size: 1em;
-  line-height: 1.42857143;
-  border-radius: 0;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+
+  li{
+    color: $color-default;
+    height: 2.5em;
+    padding: 0 1em;
+    line-height: 2.5em;
+    cursor: pointer;
+  }
+
+  span {
+    font-size: 1.3em;
+    font-weight: 500;
+    padding-left: 1em;
+    height: 100%;
+  }
+
+  a {
+    color: $color-default;
+    height: 100%;
+    width: 100%;
+  }
+
+  a:hover {
+    color: $color-secondary;
+  }
+
+  a:active, a:focus {
+    color: $color-default;
+  }
 }
 
-.menu-item:active {
-  background-color: $color-active;
+.active {
+  background-color: darken($color-primary, 10%);
 }
 
-.item-active {
-  background-color: $color-active;
+.navbar {
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 20%;
+  //min-width: 20%;
+  //max-width: 23%;
+}
+
+.navbar-default {
+  background-color: $color-primary;
+}
+
+.navbar-header {
+  padding: 1em;
+  display: inline-block;
+
+  .navbar-header-title {
+    display: inline-block;
+    color: $color-default;
+
+    h1 {
+      padding: 0;
+      margin: 0;
+    }
+  }
+}
+
+.title-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 40px;
+  line-height: 40px;
+  vertical-align: middle;
+  background-color: $color-menu;
+  color: $color-default;
+
+  div {
+    display: inline-block;
+  }
+
+  button {
+    border: none;
+    background-color: transparent;
+    height: 100%;
+    width: 2em;
+    color: $color-default;
+    font-size: 1.5em;
+    outline: none;
+  }
+}
+
+.title-bar-title {
+  position: absolute;
+  right: 0;
+  padding-right: 0.5em;
+  font-weight: 400;
+}
+
+@media screen and (min-width: 64em) {
+  .title-bar {
+    display: none;
+  }
+
+  .page-content {
+    margin-left: 20%;
+  }
+}
+
+@media screen and (max-width: 64em) {
+  .navbar {
+    display: none;
+  }
+
+  .page-content {
+    margin-top: 40px;
+  }
 }
