--- a/src/client/styles/libs/_variables.scss
+++ b/src/client/styles/libs/_variables.scss
@@ -1,5 +1,5 @@
 $color-default: #E0E0E0;
-$color-primary: #0D47A1;
+$color-primary: #000033;
 $color-secondary: #039BE5;
 $color-success: #4CAF50;
 $color-warn: #FFEB3B;
