--- a/src/client/components/page-menu/page-menu.scss
+++ b/src/client/components/page-menu/page-menu.scss
@@ -1,117 +1,91 @@
 @import "../../styles/libs/variables";
 
-.avatar {
-  height: 4rem;
-  width: 4rem;
-}
-
 .nav {
   margin: 0;
   padding: 0;
   list-style: none;
-  vertical-align: middle;
+  overflow: hidden;
 
   li{
     color: $color-default;
-    height: 2.5em;
-    padding: 0 1em;
-    line-height: 2.5em;
-    cursor: pointer;
-  }
-
-  span {
-    font-size: 1.3em;
-    font-weight: 500;
-    padding-left: 1em;
-    height: 100%;
   }
 
   a {
     color: $color-default;
     height: 100%;
     width: 100%;
+    text-decoration: none;
   }
-
-  a:hover {
-    color: $color-secondary;
-  }
-
-  a:active, a:focus {
-    color: $color-default;
-  }
-}
-
-.active {
-  background-color: darken($color-primary, 10%);
-}
-
-.navbar {
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 20%;
-  //min-width: 20%;
-  //max-width: 23%;
-}
-
-.navbar-default {
-  background-color: $color-primary;
-}
-
-.navbar-header {
-  padding: 1em;
-  display: inline-block;
-
-  .navbar-header-title {
-    display: inline-block;
-    color: $color-default;
-
-    h1 {
-      padding: 0;
-      margin: 0;
-    }
-  }
-}
-
-.title-bar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 40px;
-  line-height: 40px;
-  vertical-align: middle;
-  background-color: $color-menu;
-  color: $color-default;
-
-  div {
-    display: inline-block;
-  }
-
-  button {
-    border: none;
-    background-color: transparent;
-    height: 100%;
-    width: 2em;
-    color: $color-default;
-    font-size: 1.5em;
-    outline: none;
-  }
-}
-
-.title-bar-title {
-  position: absolute;
-  right: 0;
-  padding-right: 0.5em;
-  font-weight: 400;
 }
 
 @media screen and (min-width: 64em) {
-  .title-bar {
+  .navbar {
+    margin: 0;
+    padding: 0;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 20%;
+    max-width: 286px;
+    min-width: 247px;
+    background-color: $color-primary;
+    color: $color-default;
+  }
+
+  .navbar-header {
+    padding: 0.5em;
+    white-space: nowrap;
+    overflow: hidden;
+    background-color: $color-secondary;
+    height: 80px;
+
+    .avatar {
+      height: 4rem;
+      width: 4rem;
+      display: inline-block;
+    }
+
+    .navbar-header-title {
+      display: inline-block;
+      padding-left: 0.5em;
+
+      h1 {
+        padding: 0;
+        margin: 0;
+      }
+    }
+  }
+
+  .nav {
+    li{
+      height: 2.5em;
+      padding: 0 1em;
+      line-height: 2.5em;
+    }
+
+    span {
+      font-size: 1.3em;
+      font-weight: 500;
+      padding-left: 1em;
+      height: 100%;
+    }
+
+    a:hover {
+      color: $color-secondary;
+    }
+
+    a:active, a:focus {
+      color: $color-default;
+    }
+  }
+
+  .menu-sm {
     display: none;
+  }
+
+  .active {
+    background-color: darken($color-primary, 10%);
   }
 
   .page-content {
@@ -121,10 +95,59 @@
 
 @media screen and (max-width: 64em) {
   .navbar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    min-height: 50px;
+    background-color: $color-menu;
+  }
+
+  .nav {
+    i {
+      display: none;
+    }
+
+    li {
+      display: none;
+    }
+  }
+
+  .menu-sm {
+    display: inline-block;
+    line-height: 50px;
+    vertical-align: middle;
+    color: $color-default;
+    font-size: 1em;
+    width: 100%;
+    padding: 0 0.5em;
+
+    button {
+      color: $color-default;
+      font-size: 1.2em;
+      background-color: transparent;
+      outline: none;
+      border: 0 transparent;
+    }
+  }
+
+  .menu-sm-title {
+    position: absolute;
+    right: 1em;
+  }
+
+  .expand {
+    li {
+      display: block;
+      margin: 1em;
+    }
+  }
+
+  .navbar-header {
     display: none;
   }
 
   .page-content {
-    margin-top: 40px;
+    margin-top: 50px;
   }
 }
