--- a/src/client/components/page-menu/page-menu.html
+++ b/src/client/components/page-menu/page-menu.html
@@ -14,8 +14,11 @@
             <span class="menu-sm-title">Ben Johnson</span>
         </div>
         <ul class="${navClass}">
-            <li><a href="#info"><i class="fa fa-user"></i><span>Info</span></a></li>
+            <li><a href="#about"><i class="fa fa-user"></i><span>About</span></a></li>
+            <li><a href="#skills"><i class="fa fa-user"></i><span>Skills</span></a></li>
             <li><a href="#experience"><i class="fa fa-th-list"></i><span>Experience</span></a></li>
+            <li><a href="#projects"><i class="fa fa-user"></i><span>Projects</span></a></li>
+            <li><a href="#education"><i class="fa fa-user"></i><span>Education</span></a></li>
             <li><a href="#contact"><i class="fa fa-envelope"></i><span>Contact</span></a></li>
         </ul>
     </nav>
