--- a/src/client/components/resume-section/resume-section.scss
+++ b/src/client/components/resume-section/resume-section.scss
@@ -24,4 +24,20 @@
     height: 50px;
     visibility: hidden;
   }
+
+  .section-header {
+    height: 50px;
+    background-color: $color-secondary;
+    color: $color-default;
+    width: 100%;
+  }
+
+  .section-title {
+    line-height: 2em;
+    vertical-align: middle;
+    font-size: 1.5em;
+    font-weight: 500;
+    padding-right: 1rem;
+    text-transform: capitalize;
+  }
 }
