checking in to move to laptop

--- a/src/client/components/about/about.html
+++ b/src/client/components/about/about.html
@@ -2,6 +2,9 @@
     <require from="components/resume-section/resume-section.html"></require>
 
     <resume-section title="about" identifier="about">
-        about
+        <div class="section-part">
+            <h2>Summary</h2>
+            <p>${resume.about.summary}</p>
+        </div>
     </resume-section>
 </template>
