--- a/src/client/components/page-menu/page-menu.html
+++ b/src/client/components/page-menu/page-menu.html
@@ -1,7 +1,7 @@
 <template>
     <require from="components/page-menu/page-menu.css!"></require>
 
-    <nav class="navbar">
+    <nav class="navbar no-print">
         <div class="navbar-header">
             <img class="avatar" src="images/avatar.jpg"/>
             <div class="navbar-header-title">
@@ -14,12 +14,12 @@
             <span class="menu-sm-title">Ben Johnson</span>
         </div>
         <ul class="${navClass}">
-            <li><a href="#about"><i class="fa fa-user"></i><span>About</span></a></li>
-            <li><a href="#skills"><i class="fa fa-user"></i><span>Skills</span></a></li>
-            <li><a href="#experience"><i class="fa fa-th-list"></i><span>Experience</span></a></li>
-            <li><a href="#projects"><i class="fa fa-user"></i><span>Projects</span></a></li>
-            <li><a href="#education"><i class="fa fa-user"></i><span>Education</span></a></li>
-            <li><a href="#contact"><i class="fa fa-envelope"></i><span>Contact</span></a></li>
+            <li><a href="#about"><i class="fa fa-pencil" style="color: #FFFF00;"></i><span>About</span></a></li>
+            <li><a href="#skills"><i class="fa fa-wrench" style="color: #e600e5;"></i><span>Skills</span></a></li>
+            <li><a href="#experience"><i class="fa fa-th-list" style="color: #e60000;"></i><span>Experience</span></a></li>
+            <li><a href="#projects"><i class="fa fa-laptop" style="color: #0052cc;"></i><span>Projects</span></a></li>
+            <li><a href="#education"><i class="fa fa-graduation-cap" style="color: #FF5722;"></i><span>Education</span></a></li>
+            <li><a href="#contact"><i class="fa fa-envelope" style="color: #00cc00;"></i><span>Contact</span></a></li>
         </ul>
     </nav>
 </template>
