--- a/src/client/components/skills/skills.html
+++ b/src/client/components/skills/skills.html
@@ -1,7 +1,16 @@
 <template>
     <require from="components/resume-section/resume-section.html"></require>
+    <require from="components/skill-card/skill-card"></require>
 
     <resume-section title="skills" identifier="skills">
-        skills
+        <div class="section-part">
+            <h2>Languages</h2>
+            <!--<skill-card repeat.for="l of languages" skill.bind="l"></skill-card>-->
+            <skill-card skill="javascript"></skill-card>
+        </div>
+        <!--<div class="section-part">-->
+            <!--<h2>Technologies</h2>-->
+            <!--<skill-card repeat.for="t of technologies" skill.bind="t"></skill-card>-->
+        <!--</div>-->
     </resume-section>
 </template>
