i hate alabama football

--- a/src/client/components/resume-section/resume-section.html
+++ b/src/client/components/resume-section/resume-section.html
@@ -1,7 +1,7 @@
 <template bindable="identifier, title">
     <require from="components/resume-section/resume-section.css!"></require>
 
-    <section id="${identifier}">
+    <section id="${identifier}" title="">
         <div class="section-header">
             <span class="section-title pull-right">${title}</span>
         </div>
