--- a/src/client/styles/site.scss
+++ b/src/client/styles/site.scss
@@ -13,9 +13,17 @@ body {
   float: right;
 }
 
+.print-only {
+  display: none;
+}
+
 @media print
 {
   .no-print {
     display: none !important;
+  }
+
+  .print-only {
+    display: initial;
   }
 }
