--- a/src/client/components/skills/skills.html
+++ b/src/client/components/skills/skills.html
@@ -5,12 +5,11 @@
     <resume-section title="skills" identifier="skills">
         <div class="section-part">
             <h2>Languages</h2>
-            <!--<skill-card repeat.for="l of languages" skill.bind="l"></skill-card>-->
-            <skill-card skill="javascript"></skill-card>
+            <skill-card repeat.for="l of languages" skill.bind="l"></skill-card>
         </div>
-        <!--<div class="section-part">-->
-            <!--<h2>Technologies</h2>-->
-            <!--<skill-card repeat.for="t of technologies" skill.bind="t"></skill-card>-->
-        <!--</div>-->
+        <div class="section-part">
+            <h2>Technologies</h2>
+            <skill-card repeat.for="t of technologies" skill.bind="t"></skill-card>
+        </div>
     </resume-section>
 </template>
