--- a/src/client/components/resume-section/resume-section.scss
+++ b/src/client/components/resume-section/resume-section.scss
@@ -18,8 +18,7 @@
 
 @media screen and (min-width: 64em) {
   .section-part {
-    padding: 0 1.5rem;
-    margin-bottom: 1.5rem;
+    padding: 0 1.5rem 1.5rem 1.5rem;
   }
 }
 
