--- a/src/client/components/skill-card/skill-card.scss
+++ b/src/client/components/skill-card/skill-card.scss
@@ -19,14 +19,18 @@
 
 @media screen and (min-width: 64em) {
   .skill-card {
-    margin: 0.3rem;
+    margin: 0.5rem;
     height: 9rem;
     width: 7rem;
+    box-shadow:0 0.125rem 0.125rem 0 rgba(0,0,0,.14),0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,.2),0 0.0625rem 0.3125rem 0 rgba(0,0,0,.12);
+  }
+
+  .skill-card-img, img {
+      height: 7rem;
+      width: 7rem;
   }
 
   .skill-card-img {
-    height: 7rem;
-    min-width: 7rem;
     line-height: 7rem;
     vertical-align: middle;
   }
@@ -38,25 +42,24 @@
 
 @media screen and (max-width: 64em) {
   .skill-card {
-    height: 4rem;
-    width: 3.5rem;
+    margin: 0.3rem;
+    height: 6.3rem;
+    width: 5rem;
+  }
+
+  .skill-card-img, img {
+    height: 5rem;
+    width: 5rem;
   }
 
   .skill-card-img {
-    height: 3rem;
-    width: 3.5rem;
-    line-height: 3rem;
+    line-height: 5rem;
     vertical-align: middle;
     font-size: 2em;
-
-    img {
-      height: 100%;
-      width: 100%;
-    }
   }
 
   .skill-card-footer {
     padding: 0.2rem 0;
-    font-size: 0.5em;
+    font-size: 0.7em;
   }
 }
