finished skill cards

--- a/src/client/components/page-menu/page-menu.scss
+++ b/src/client/components/page-menu/page-menu.scss
@@ -123,9 +123,8 @@
     button {
       color: $color-default;
       font-size: 1.2em;
-      background-color: transparent;
-      outline: none;
-      border: 0 transparent;
+      background-color: $color-menu;
+      border: 0 $color-menu;
     }
   }
 
