--- a/src/client/components/resume-section/resume-section.scss
+++ b/src/client/components/resume-section/resume-section.scss
@@ -16,6 +16,13 @@
   text-transform: capitalize;
 }
 
+.section-part {
+  h2 {
+    margin: 0;
+    padding: 19px 0;
+  }
+}
+
 @media screen and (min-width: 64em) {
   .section-part {
     padding: 0 1.5rem 1.5rem 1.5rem;
@@ -48,6 +55,6 @@
   }
 
   .section-part {
-    padding: 0 0.5rem;
+    padding: 0.5rem 0.5rem;
   }
 }
