--- a/src/client/components/skill-card/skill-card.html
+++ b/src/client/components/skill-card/skill-card.html
@@ -1,13 +1,13 @@
 <template>
     <require from="components/skill-card/skill-card.css!"></require>
 
-    <div class="skill-card">
+    <div class="skill-card no-print">
         <div class="skill-card-img" id.bind="skill">
             <i class="fa fa-spinner fa-spin" show.bind="!imageLoaded"></i>
-            <img show.bind="imageLoaded" style="z-index: 1000;"/>
+            <img show.bind="imageLoaded" style="z-index: 1000;" src.bind="imageData"/>
         </div>
         <div class="skill-card-footer">
-            <span>${skill | skillName}</span>
+            <span>${skillName || skill}</span>
         </div>
     </div>
 </template>
