--- a/src/client/components/skills/skills.html
+++ b/src/client/components/skills/skills.html
@@ -11,5 +11,13 @@
             <h2>Technologies</h2>
             <skill-card repeat.for="t of technologies" skill.bind="t"></skill-card>
         </div>
+        <div class="section-part">
+            <h2>Tools</h2>
+            <skill-card repeat.for="t of tools" skill.bind="t"></skill-card>
+        </div>
+        <div class="section-part">
+            <h2>Processes</h2>
+            <skill-card repeat.for="p of processes" skill.bind="p"></skill-card>
+        </div>
     </resume-section>
 </template>
