working on experience

--- a/src/client/components/skills/skills.html
+++ b/src/client/components/skills/skills.html
@@ -16,6 +16,10 @@
             <skill-card repeat.for="t of tools" skill.bind="t"></skill-card>
         </div>
         <div class="section-part">
+            <h2>Data</h2>
+            <skill-card repeat.for="d of data" skill.bind="d"></skill-card>
+        </div>
+        <div class="section-part">
             <h2>Processes</h2>
             <skill-card repeat.for="p of processes" skill.bind="p"></skill-card>
         </div>
