--- a/src/client/components/contact/contact.html
+++ b/src/client/components/contact/contact.html
@@ -1,7 +1,12 @@
 <template>
     <require from="components/resume-section/resume-section.html"></require>
+    <require from="components/contact/contact.css!"></require>
 
     <resume-section title="contact" identifier="contact">
-        contact
+        <div class="contact">
+            <span><i class="fa fa-envelope"></i> ${resume.about.email}</span>
+            <span><i class="fa fa-phone"></i> ${resume.about.phone}</span>
+            <span><a href="${resume.about.github}" target="_blank"><i class="fa fa-github"></i></a></span>
+        </div>
     </resume-section>
 </template>
