--- a/src/client/components/education/education.html
+++ b/src/client/components/education/education.html
@@ -1,7 +1,11 @@
 <template>
     <require from="components/resume-section/resume-section.html"></require>
+    <require from="components/education/education.css!"></require>
+    <require from="components/education-card/education-card.html"></require>
 
     <resume-section title="education" identifier="education">
-        education
+        <div class="education-section">
+            <education-card repeat.for="e of resume.education" education.bind="e"></education-card>
+        </div>
     </resume-section>
 </template>
