--- a/src/client/components/experience-card/experience-card.html
+++ b/src/client/components/experience-card/experience-card.html
@@ -1,15 +1,15 @@
 <template>
     <require from="components/experience-card/experience-card.css!"></require>
+    <require from="components/project-card/project-card"></require>
 
     <div class="experience-card">
         <div class="experience-card-header">
-            <div class="experience-card-logo">
-                <i class="fa fa-spinner fa-spin" show.bind="!imageLoaded"></i>
-                <img show.bind="imageLoaded" style="z-index: 1000;" src.bind="imageData"/>
-            </div>
             <a href="${experience.link}" target="_blank"><h2>${experience.company}</h2></a>
             <span> - ${experience.location}</span>
-            <span class="experience-date">${experience.date}</span>
+            <span class="experience-date"><i class="fa fa-calendar"></i> ${experience.date}</span>
+        </div>
+        <div class="experience-card-content">
+            <project-card repeat.for="p of experience.projects" project.bind="p"></project-card>
         </div>
     </div>
 </template>
